--- a/style.css
+++ b/style.css
@@ -3,28 +3,35 @@
     height: 100px;
     border: 1px solid red;
 }
+
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
 }
+
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
 }
+
 .ex-4-square {
     width: 100px;
     height: 100px;
     background: red;
 }
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
     height: 60px;
     background: red;
 }
-.ex-6-img, .ex-7-img, .ex-8-img {
+
+.ex-6-img,
+.ex-7-img,
+.ex-8-img {
     width: 500px;
 }
 
@@ -32,13 +39,17 @@
     margin: 50px 100px;
     width: 400px;
 }
+
 .ex-10-icon {
     font-size: 60px;
 }
+
 .ex-11-icon {
     font-size: 60px;
 }
-.ex-12-button, .ex-13-button {
+
+.ex-12-button,
+.ex-13-button {
     position: relative;
     display: block;
     width: 200px;
@@ -51,7 +62,9 @@
     text-align: center;
     text-decoration: none;
 }
-.ex-12-top-white, .ex-13-top-white {
+
+.ex-12-top-white,
+.ex-13-top-white {
     position: absolute;
     top: -10px;
     left: 10%;
@@ -59,11 +72,292 @@
     width: 60px;
     height: 20px;
 }
-.ex-12-bottom-white, .ex-13-bottom-white {
+
+.ex-12-bottom-white,
+.ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
     right: 20%;
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+/*
+***
+***
+***
+***
+SVOGLIMENTO
+***
+***
+***
+***
+*/
+
+/* Esercizio 1 */
+
+.ex-1-square {
+    transition: background-color 1s
+}
+
+.ex-1-square:hover {
+    background-color: red;
+}
+
+/* Esercizio 2 */
+
+.ex-2-square {
+    transition: width 1s
+}
+
+.ex-2-square:active {
+    width: 1000px;
+}
+
+/* Esercizio 3 */
+
+.ex-3-square {
+    transition: border-radius 1s
+}
+
+.ex-3-square:hover {
+    border-radius: 50%;
+}
+
+/* Esercizio 4 */
+
+.ex-4-square {
+    transition: opacity 1s
+}
+
+.ex-4-square:hover {
+    opacity: 0;
+}
+
+/* Esercizio 5 */
+
+.ex-5-square {
+    transition: scale
+}
+
+.ex-5-square:hover {
+    scale: 1.5;
+}
+
+.ex-5-square:active {
+    scale: 0.5;
+}
+
+/* Esercizio 6 */
+
+.ex-6-img:hover {
+    filter: grayscale(1);
+}
+
+/* Esercizio 7 */
+
+.ex-7-img {
+    transition: filter 1s
+}
+
+.ex-7-img:hover {
+    filter: grayscale(1) blur(10px);
+}
+
+/* Esercizio 8 */
+
+.ex-8-img:hover {
+    filter: hue-rotate(90deg) contrast(200%);
+    border-radius: 30px;
+}
+
+/* Esercizio 9 */
+
+.ex-9-img:hover {
+    filter: brightness(0.5) drop-shadow(5px 5px 1px green);
+    border-radius: 30px;
+    scale: 1.2;
+}
+
+/* Esercizio 10 */
+
+.ex-10-icon {
+    animation-name: rotation10;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes rotation10 {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* Esercizio 11 */
+
+.ex-11-icon:hover {
+    animation: rotation11 2s linear infinite;
+
+}
+
+@keyframes rotation11 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    90% {
+        transform: rotate(270deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+/* Esercizio 12 */
+
+.ex-12-button:hover .ex-12-top-white {
+    animation: move12top 1s ease-in infinite;
+}
+
+@keyframes move12top {
+    0% {
+        left: 10%;
+    }
+
+    50% {
+        left: 70%;
+    }
+
+    100% {
+        left: 10%;
+    }
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: move12bottom 1s ease-in infinite;
+}
+
+@keyframes move12bottom {
+    0% {
+        right: 20%;
+    }
+
+    50% {
+        right: 70%;
+    }
+
+    100% {
+        right: 10%;
+    }
+}
+
+/* Esercizio 13 */
+
+.well.special {
+    position: relative;
+}
+
+.hint {
+    position: absolute;
+    left: 20px;
+    bottom: calc(50% - 10px);
+    font-size: 18px;
+    opacity: 0;
+    transition: 2s;
+}
+
+.ex-13-button {
+    transition: transform 1s;
+}
+
+.well.special:hover {
+    cursor: none;
+}
+
+.well.special:hover .hint {
+    opacity: 1;
+}
+
+.well.special:hover .ex-13-button {
+    transform: translate(520px, 0px)
+}
+
+.well.special:hover .ex-13-top-white {
+    animation: move13top 3s 3s infinite linear;
+
+}
+
+@keyframes move13top {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+
+    20% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+
+    40% {
+        left: calc(100% - 30px);
+        top: calc(100% - 10px);
+    }
+
+    60% {
+        left: -30px;
+        top: calc(100% - 10px);
+    }
+
+    80% {
+        left: -30px;
+        top: -10px;
+    }
+
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
+
+.well.special:hover .ex-13-bottom-white {
+    animation: move13bottom 3s 3s infinite linear;
+}
+
+@keyframes move13bottom {
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+
+    20% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+
+    40% {
+        right: calc(100% - 30px);
+        bottom: calc(100% - 10px);
+    }
+
+    60% {
+        right: -30px;
+        bottom: calc(100% - 10px);
+    }
+
+    80% {
+        right: -30px;
+        bottom: -10px;
+    }
+
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
 }
